syntax = "proto3";
package clinical;

import "google/protobuf/timestamp.proto";

message BloodMeasure {
    string id = 1;
    float diastole = 2;
    float systole = 3;
    google.protobuf.Timestamp datetime = 4;
}

message WeightMeasure {
    string id = 1;
    float measure = 2;
    google.protobuf.Timestamp datetime = 3;
}

message WeightRecords {
    repeated WeightMeasure records = 1;
    google.protobuf.Timestamp datetime = 2;
}

message BloodPressure {
    string id = 1;
    float measure = 2;
    google.protobuf.Timestamp datetime = 3;
}