syntax = "proto3";
import "messages.proto";

package clinical;

service MeasureService {
    rpc calculateBloodPressure(BloodMeasure) returns (BloodPressure);
    rpc calculateMeanWeight(WeightRecords) returns (WeightMeasure);
}